# PYTHON-PROJECTS

HOMEWORK-CODING-PROJECTS/: 00_intro_to_python.ipynb  02_lists.ipynb  03_if_statements.ipynb  04_dictionaries.ipynb  06_functions.ipynb  07_information_flow.ipynb  testing.ipynb
HOMEWORK-PROJECTS/: 01_expressions.ipynb  02_eraser_canvas.py  02_lists.ipynb  04_dictionaries.ipynb  05_loops_control_flow.ipynb  loops.ipynb  testing.ipynb
advanced-chainlit-agent/: main.py  pyproject.toml
ai_jarvis_agent/: agent_voice_output.py  agent_web_tool.py  audio_to_text_engine.py  global_engine.py  input_to_voice.py  main.py  my_triage_agent.py  user_input.txt  voice_to_input.py
api_testing/: main.py  pyproject.toml
auth_chainlit-agent/: .env.example  main.py
best_practice_add_function/: main.py  pyproject.toml
bmi_calculator/: main.py
calculator/: main.py  pyproject.toml
doctor-agent/: .env  ai_doctor.py  ai_doctor_2.0.py  ai_doctor_3.0.py  ai_doctor_4.0.py  ai_doctor_5.0.py  ai_doctor_6.0.py  ai_doctor_7.0.py  ai_doctor_8.0.py  ai_doctor_9.0.py  elevenlabs_models.py  output.txt  pyproject.toml  requirements.txt
double_it/: main.py  pyproject.toml
fastapi-rate-limiter/: .gitignore  README.md  endpoints.py  pyproject.toml  rate_limit.py  rbac.py
fastapi_homepage/: index.html  main.py  person.html  pyproject.toml
fastapi_money_making/: main.py  pyproject.toml
g_mail_agent/: .env.example  pyproject.toml  reading_mail.py  sending_mail.py
handy_agent/: goog.py  handy_agent.py  main.py  pyproject.toml  testing.py
openai-text-to-voice/: app.py  pyproject.toml
(+135 files in other folders)
