[project]
name = "fastapi-rate-limiter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "pwdlib[bcrypt]>=0.3.0",
    "pydantic>=2.13.4",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.49.0",
]
